			  - 2007-01-31:  Fixed #78  - Bug in phpAds_dbConnect that can cause page rendering to hang  (Matteo)
			  - 2007-01-31:  Fixed #63  - Resource files may trigger an Undefined index notice  (Matteo)
			  - 2007-02-10:  Fixed #132 - Update ISO 3666-1 codes  (Matteo)
			  - 2007-03-22:  Fixed #249 - Wrong deactivation cause displayed in campaign-edit.php  (Matteo)
			  - 2007-03-22:  Fixed #165 - Missing phpAds_makeTimeStamp when a campaign expires  (Marek)


Openads 2.0.11
			+ Misc bugfixes
			  - 2007-01-22:  Fixed #50 - Stats conversion isn't working on some browsers  (Matteo)
			  - 2007-01-22:  Fixed #45 - Automaintenance could be triggered twice on Netscape 4 or even if it's disabled  (Matteo)
			  - 2007-01-22:  Fixed #52 - Endless loop in lib-view-query.inc.php under some circumstances  (Matteo)
			  - 2007-01-24:  Fixed #56 - Avoid multiple requests of adg.js when more adsense banners are delivered in the same page  (Matteo)

Openads 2.0.10
			+ Misc changes
			  - 2007-01-03:  Maintenance task now is performed during banner delivery if a cron job isn't correctly set up. The new feature is enabled by default and can be disabled in the administrator settings screen  (Matteo)
			  - 2007-01-09:  Added remote logo in the admin interface so that logo is automatically updated in case of name changes  (Matteo)
			  - 2007-01-10:  Added new Settings / Maintenance screen with status and information about scheduled and automatic maintenance  (Matteo)
			  - 2007-01-10:  Added support for click tracking Google AdSense banners when using IE or Firefox  (Matteo)
			  - 2007-01-11:  Removed PDF documentation and added links to on-line docs available at http:/docs.openads.org  (Matteo)
			  - 2007-01-15:  Added Opera compatibility to the Google AdSense click tracking code  (Arlen Coupland)

			+ Misc bugfixes
			  - 2006-11-14:  Campaign-edit wasn't correctly working with MySQL 3.x anymore  (Matteo)